# GUIMovieApp

./: CMakeLists.txt  CSVWatchList.cpp  CSVWatchList.h  FileWatchList.h  GUI.cpp  GUI.h  HTMLWatchList.cpp  HTMLWatchList.h  Movie.cpp  Movie.h  MovieValidator.cpp  MovieValidator.h  README.md  RepoException.cpp  RepoException.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Undo.cpp  Undo.h  Watchlist.cpp  Watchlist.h  main.cpp  test_dynamic_vector.cpp  test_dynamic_vector.h  test_movie.cpp  test_movie.h  test_repository.cpp  test_repository.h  test_service.cpp  test_service.h  test_wath_list.cpp  test_wath_list.h
Qt/: appgui.cpp  appgui.h  appgui.ui  user.cpp  user.h  user.ui  user_admin.cpp  user_admin.h  user_admin.ui
